<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout 
        android:id="@+id/setting_profile_rl_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_alignParentTop="true" 
        android:background="@drawable/chat_bg_top_bar">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:background="@drawable/chat_back_button_selector" />

        <TextView
            android:id="@+id/tvSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="プロフィール"
            android:textColor="#000000"
            android:textSize="18dip"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_margin="10dip" >

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="100dip"
            android:layout_height="100dip"
            android:scaleType="fitCenter"
            android:background="@drawable/profile_image" />

        <RelativeLayout
            android:id="@+id/rlProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dip"
            android:layout_toRightOf="@+id/avatar" >

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dip"
                android:text="@string/profile_phone"
                android:textColor="@drawable/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tv1"
                android:layout_marginLeft="10dip"
                android:text="080-1234-5678"
                android:textColor="@drawable/black"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv2"
                android:background="@drawable/text_box_1"
                android:gravity="bottom"
                android:padding="10dip" >

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/profile_name"
                    android:textSize="@dimen/profile_text"
                    android:textColor="@android:color/darker_gray"/>
                <EditText
                    android:id="@+id/tv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/tv3"
                    android:layout_alignBottom="@+id/tv3"
                    android:layout_toRightOf="@+id/tv3"
                    android:paddingLeft="10dip"
                    android:text="Demo"
                    android:textSize="@dimen/profile_text"
                    android:background="@android:color/transparent"
                    android:textColor="@drawable/black"
                    android:textStyle="bold" />
            </RelativeLayout>
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/ll"
        android:layout_alignLeft="@+id/ll"
        android:layout_below="@+id/relativeLayout2"
        android:layout_margin="10dip"
        android:background="@drawable/text_box_1"
        android:padding="10dip" >

        <TextView
            android:id="@+id/tv6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/profile_nick_name"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/tv5"
            android:layout_alignTop="@+id/tv6"
            android:layout_alignBottom="@+id/tv6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv6"
            android:paddingLeft="10dip"
            android:text="Private"
            android:textSize="@dimen/profile_text"
            android:background="@android:color/transparent"
            android:textColor="@drawable/black"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout3"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="10dip"
        android:text="@string/profile_birth_year"
        android:textColor="@drawable/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativeLayout3"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:text="@string/profile_public_birth"
        android:textColor="@drawable/black"
        android:textStyle="bold" />
<!-- Birth day -->
    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview1"
        android:layout_marginRight="10dip"
        android:weightSum="3" >
	    <RelativeLayout
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_margin="5dip"
	         android:layout_weight="1"
	         android:background="@drawable/date_box_1" >
	
	        <EditText
	            android:id="@+id/tvYear"
	            android:layout_alignTop="@+id/tv7"
	            android:layout_alignBottom="@+id/tv7"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_centerVertical="true"
	            android:paddingLeft="12dip"
	            android:text="2012"
	            android:inputType="numberDecimal"
	            android:textSize="@dimen/profile_text"
	            android:background="@android:color/transparent"
	            android:textColor="@drawable/black"
	            android:textStyle="bold" />
	         <TextView
	            android:layout_marginLeft="2dip"
	            android:id="@+id/tv7"
	            android:layout_centerVertical="true"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@+id/tvYear"
	            android:text="@string/profile_year"
	            android:textSize="@dimen/profile_text"
	            android:textColor="@android:color/black" />
	    </RelativeLayout>
	     <RelativeLayout
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_margin="5dip"
	         android:layout_weight="1"
	         android:background="@drawable/date_box_1" >
	
	        <EditText
	            android:id="@+id/tvMonth"
	            android:layout_alignTop="@+id/tv8"
	            android:layout_alignBottom="@+id/tv8"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_centerVertical="true"
	            android:paddingLeft="12dip"
	            android:text="12"
	            android:inputType="numberDecimal"
	            android:textSize="@dimen/profile_text"
	            android:background="@android:color/transparent"
	            android:textColor="@drawable/black"
	            android:textStyle="bold" />
	         <TextView
	            android:id="@+id/tv8"
	            android:layout_marginLeft="2dip"
	            android:layout_centerVertical="true"
	            android:layout_width="wrap_content"
	            android:textSize="@dimen/profile_text"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@+id/tvMonth"
	            android:text="@string/profile_month"
	            android:textColor="@android:color/black" />
	    </RelativeLayout>
	        <RelativeLayout
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_margin="5dip"
	         android:layout_weight="1"
	         android:background="@drawable/date_box_1" >
	
	        <EditText
	            android:id="@+id/tvDate"
	            android:layout_alignTop="@+id/tv9"
	            android:layout_alignBottom="@+id/tv9"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_centerVertical="true"
	            android:paddingLeft="12dip"
	            android:text="12"
	            android:inputType="numberDecimal"
	            android:textSize="@dimen/profile_text"
	            android:background="@android:color/transparent"
	            android:textColor="@drawable/black"
	            android:textStyle="bold" />
	         <TextView
	            android:id="@+id/tv9"
	            android:layout_marginLeft="2dip"
	            android:layout_centerVertical="true"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="@dimen/profile_text"
	            android:layout_toRightOf="@+id/tvDate"
	            android:text="@string/profile_date"
	            android:textColor="@android:color/black" />
	    </RelativeLayout>
    </LinearLayout>
    
    <LinearLayout 
            android:id="@+id/profile_gender"
            android:layout_alignLeft="@+id/profile_on_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/relativeLayout3"
            android:layout_alignTop="@+id/relativeLayout3">
            <ImageView 
                android:id="@+id/profile_img_gender"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/profile_button_gender_selector"/>
            <ImageView
                android:tag="toggle"
                android:duplicateParentState="true"
                android:layout_marginLeft="-2dip"
                android:id="@+id/profile_img_slide_gender" 
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/handle_silde"/>
      </LinearLayout>
        
        
      <LinearLayout 
            android:layout_alignTop="@+id/ll"
            android:layout_alignBottom="@+id/ll"
            android:layout_width="wrap_content"
            android:id="@+id/profile_on_off"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textview2"
            android:layout_below="@+id/textview2">
            <ImageView 
                android:id="@+id/profile_img_on"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/profile_button_on_off_selector"/>
            <ImageView
                android:tag="toggle"
                android:layout_marginLeft="-2dip"
                android:id="@+id/profile_img_slide_on" 
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/handle_silde"/>
        </LinearLayout>
    </RelativeLayout>
    <include layout="@layout/setting_profile_content"/>
    <include layout="@layout/setting_profile_upload_image"/>

</RelativeLayout>
</ScrollView>